--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "start": "ts-node --transpile-only src/server.ts"
+    "start": "ts-node-dev --transpile-only src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
