--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ts-node-dev": "^1.1.6"
   },
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
@@ -16,7 +17,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "ts-node-dev": "^1.1.6",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.3"
   }
