--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "ts-node-dev": "^1.1.6"
+    "ts-node-dev": "^1.1.6",
+    "@types/express": "^4.17.11",
+    "typeorm": "^0.2.31",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
