--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.6",
-    "@types/express": "^4.17.11",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.3"
   },
@@ -17,10 +18,5 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "start": "ts-node-dev --transpile-only src/server.ts"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.11",
-    "typeorm": "^0.2.31",
-    "typescript": "^4.2.3"
   }
 }
